--- a/README
+++ b/README
@@ -4,3 +4,6 @@ a small learning project in C.
 
 Apart from simulating a game, it also allows the user to query the chances of
 various events, such as the chances of a getting a yahtezee on an isolated roll etc.
+
+## Build
+Using automake. Configured according to: https://www.youtube.com/watch?v=3XO0d9Qyc34
